crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EVALUATION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EVALUATION",
  "name": {
    "_type": "DV_TEXT",
    "value": "Problem"
  },
  "archetype_node_id": "openEHR-EHR-EVALUATION.problem_diagnosis.v1",
  "language": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "ISO_639-1"
    },
    "code_string": "en"
  },
  "encoding": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "IANA_character-sets"
    },
    "code_string": "UTF-8"
  },
  "subject": {
    "_type": "PARTY_SELF"
  },
  "data": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "data"
    },
    "archetype_node_id": "at0001"
  }
}
