crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT",
  "name": {
    "_type": "DV_TEXT",
    "value": "extract"
  },
  "archetype_node_id": "openEHR-EHR-EXTRACT.sample.v1",
  "time_created": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  },
  "system_id": {
    "_type": "HIER_OBJECT_ID",
    "value": "2a1a9172-e6ab-44b8-a18f-40e3417a950a"
  },
  "sequence_nr": 1
}
