crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT_ENTITY_MANIFEST.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT_ENTITY_MANIFEST",
  "extract_id_key": "entity-1"
}
