crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT_FOLDER.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT_FOLDER",
  "name": {
    "_type": "DV_TEXT",
    "value": "folder"
  },
  "archetype_node_id": "openEHR-EHR-EXTRACT_FOLDER.sample.v1"
}
