crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT_PARTICIPATION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT_PARTICIPATION",
  "performer": "clinician-1",
  "function": {
    "_type": "DV_TEXT",
    "value": "author"
  }
}
