crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT_REQUEST.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT_REQUEST",
  "name": {
    "_type": "DV_TEXT",
    "value": "extract request"
  },
  "archetype_node_id": "openEHR-EHR-EXTRACT_REQUEST.sample.v1",
  "uid": {
    "_type": "HIER_OBJECT_ID",
    "value": "e820e09c-c4b3-4200-80bd-c012048cfac2"
  },
  "extract_spec": {
    "_type": "EXTRACT_SPEC",
    "extract_type": {
      "_type": "DV_CODED_TEXT",
      "value": "full",
      "defining_code": {
        "_type": "CODE_PHRASE",
        "terminology_id": {
          "_type": "TERMINOLOGY_ID",
          "value": "openehr"
        },
        "code_string": "full"
      }
    },
    "include_multimedia": false,
    "priority": 0,
    "link_depth": 1,
    "manifest": {
      "_type": "EXTRACT_MANIFEST"
    }
  }
}
